tests/rosetta/transpiler/C/call-a-foreign-language-function.error
compile failed: exit status 1: /tmp/ctranspile1053193229/call-a-foreign-language-function.mochi.c: In function ‘_mem’:
/tmp/ctranspile1053193229/call-a-foreign-language-function.mochi.c:40:12: warning: ‘mallinfo’ is deprecated [-Wdeprecated-declarations]
   40 |     struct mallinfo mi = mallinfo();
      |            ^~~~~~~~
In file included from /tmp/ctranspile1053193229/call-a-foreign-language-function.mochi.c:5:
/usr/include/malloc.h:114:24: note: declared here
  114 | extern struct mallinfo mallinfo (void) __THROW __MALLOC_DEPRECATED;
      |                        ^~~~~~~~
/tmp/ctranspile1053193229/call-a-foreign-language-function.mochi.c: At top level:
/tmp/ctranspile1053193229/call-a-foreign-language-function.mochi.c:44:13: error: conflicting types for ‘strdup’; have ‘const char *(const char *)’
   44 | const char* strdup(const char* s);
      |             ^~~~~~
In file included from /tmp/ctranspile1053193229/call-a-foreign-language-function.mochi.c:3:
/usr/include/string.h:187:14: note: previous declaration of ‘strdup’ with type ‘char *(const char *)’
  187 | extern char *strdup (const char *__s)
      |              ^~~~~~
/tmp/ctranspile1053193229/call-a-foreign-language-function.mochi.c:48:13: error: conflicting types for ‘strdup’; have ‘const char *(const char *)’
   48 | const char* strdup(const char* s) {
      |             ^~~~~~
/usr/include/string.h:187:14: note: previous declaration of ‘strdup’ with type ‘char *(const char *)’
  187 | extern char *strdup (const char *__s)
      |              ^~~~~~

